--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&family=Open+Sans:wght@700&family=Roboto+Mono&family=Rubik:wght@700&display=swap" rel="stylesheet">
 
 <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Valentin Rusoiu"
+      content="I'm a PASSIONATE web developer specializing in creating EXCEPTIONAL digital experiences. With knowledge in React, WebGL, and powerful libraries like @react- three/fiber and Drei, I have the skills to bring your ideas to life with STUNNING VISUAL EFFECTS AND IMMERSIVE INTERACTIVITY."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
